<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_commentBottomSheet"
            app:destination="@id/commentBottomSheet" />
        <action
            android:id="@+id/action_navigation_home_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_navigation_home_to_reposrtFragment"
            app:destination="@id/reposrtFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.myapplication.ui.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.myapplication.ui.Add.AddFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.myapplication.ui.chat.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/userFragment"
        android:name="com.example.myapplication.ui.user.UserFragment"
        android:label="fragment_user"
        tools:layout="@layout/fragment_user" />
    <dialog
        android:id="@+id/commentBottomSheet"
        android:name="utils.CommentBottomSheet"
        android:label="fragment_comment_bottom_sheet"
        tools:layout="@layout/fragment_comment_bottom_sheet" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/reposrtFragment"
        android:name="com.example.myapplication.ui.home.ReportFragment"
        android:label="fragment_reposrt"
        tools:layout="@layout/fragment_reposrt" />
</navigation>