<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.settings.TermsOfServiceFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:backgroundTint="@color/white"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingVertical="18dp"
            android:layout_marginHorizontal="24dp"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:id="@+id/btnBack"
                android:background="?selectableItemBackgroundBorderless"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Terms of Use"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/black"
                />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/point1"
        android:layout_marginTop="28dp"
        android:textColor="@color/base800"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="Terms of Service"
        android:layout_marginTop="32dp"
        android:textColor="@color/base900"
        android:textSize="24sp"
        android:fontFamily="@font/inter_medium"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="Last updated: February 2019"
        android:layout_marginTop="8dp"
        android:textColor="@color/base500"
        android:textSize="15sp"
        android:fontFamily="@font/inter_medium"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="1. Your Relationship With Us"
        android:layout_marginTop="24dp"
        android:textColor="@color/base900"
        android:textSize="18sp"
        android:fontFamily="@font/inter_medium"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/point7"
        android:layout_marginTop="8dp"
        android:textColor="@color/base800"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="1. Your Relationship With Us"
        android:layout_marginTop="24dp"
        android:textColor="@color/base900"
        android:textSize="18sp"
        android:fontFamily="@font/inter_medium"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/point8"
        android:layout_marginTop="11dp"
        android:textColor="@color/base800"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/point6"
        android:layout_marginTop="11dp"
        android:textColor="@color/base800"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/base800"
                android:textSize="15sp"
                android:text="@string/point9"
                android:fontFamily="@font/inter_regular"
                android:paddingBottom="20dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>