<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.settings.ArticleFragment">





    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:backgroundTint="@color/white"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingVertical="18dp"
            android:layout_marginHorizontal="24dp"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:id="@+id/btnBack"
                android:background="?selectableItemBackgroundBorderless"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Article"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/black"
                />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How to grow your audience:"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:textColor="@color/base800"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1. Ipsum suspendisse mattis ipsum imperdiet quis. Nisi nam sit lobortis in eget eros, egestas"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/base800"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pointone"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/base800"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point2"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/base800"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point3"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/base800"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point4"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/base800"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point5"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/base800"
        android:textSize="15sp"
        android:fontFamily="@font/inter_regular"
        />



        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/base100"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="32dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Is your problem resolved?"
            android:layout_marginLeft="24dp"
            android:textColor="@color/base800"
            android:textSize="15sp"
            android:fontFamily="@font/inter_regular"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cornerRadius="100dp"
                android:padding="13dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/base100"
                android:elevation="0dp"
                android:textSize="15sp"
                android:letterSpacing="0"
                android:textAllCaps="false"
                android:text="Yes 👌"
                android:textColor="@color/black"
                app:elevation="0dp"
                app:strokeWidth="1dp"
                android:stateListAnimator="@null"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="13dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:cornerRadius="100dp"
                android:layout_marginLeft="8dp"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/base100"
                android:elevation="0dp"
                android:textSize="15sp"
                android:letterSpacing="0"

                android:textAllCaps="false"
                android:text="No 😐"
                android:textColor="@color/black"
                app:elevation="0dp"
                app:strokeWidth="1dp"
                android:stateListAnimator="@null"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
    </LinearLayout>


    </ScrollView>

</LinearLayout>